k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: investigator-web
spec:
  type: NodePort
  selector:
    app: investigator-web
  ports:
    - port: 8090
      targetPort: 8090
      nodePort: 30090
